src/style.css
#content{
    height: 100vh;

}
/*homepage*/

.title{
    font-weight: 900;
    font-family: Helvetica;
    font-size: 56px;
    margin: 4vh 0px 0px 0px;
    text-align: center;
    
}

.titleLink{
    
    margin: 2.3vh 0px 0px 2vw;
    text-align: center;
    color: black;
    display: block;
    width: fit-content;
    font-weight: 700;
    font-family: Helvetica;
    font-size: 18px;
}

.menuWrapper{
    display: flex;
    flex-direction: column;
    width: fit-content;
    position: absolute;
    top: 2vh;
    left: 2vw;

   
}

.linkWrapper{
    display: flex;
    flex-direction: column;
    width: fit-content;
    padding-left: 3vw;
    padding-top: .75vh;
    line-height: 1.5;

    animation-name: fadeIn;
    animation-duration: .5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

.linkWrapperFadeOut{
    animation-name: fadeOut;
    animation-duration: .5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}



.menu-link{
    color: black;
    text-decoration: none;

}


#splashWrapper{
    display: flex;
    flex-direction: column;
    width: 60vw;
    margin: 6vw auto 0 auto;
    align-items: center;
}

#splashImg{
    width: 40vw;
    height: auto;
}

#linkWrapper{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 5vh;
}

.link{
    
    font-size: 18px;
    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
    color: black;
    text-decoration: none;
    padding: 0px 10px;
}



.link:hover{
    cursor: pointer;
}

.thumbWrapper{
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.thumbnail{
    height: 150px;
    width: auto;

    animation-name: fadeIn;
    animation-duration: 1s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

.thumbnail:hover{
    cursor:pointer;
}

.thumbCaption{
    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
    text-align: center;
    color: black;
    text-decoration: none;
}

.thumbCaption:hover{
    cursor: pointer;
}

#editorialWrapper{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 5vh;
}

.edThumbnail{
    height: 250px;
    width: auto;
}

a:hover, a:visited, a:link, a:active
{
    text-decoration: none;
}

/* about page */

.aboutText{
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 14px;
    height: 80vh;
    margin: 0px auto;
    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
    text-align: center;
    line-height: 2;
}


/* photo gallery */

.gallery-title{
    font-weight: 700;
    font-family: Helvetica;
    font-size: 18px;
    margin: 0px;
    padding-left: 1.25vw;
    padding-top: 1vh;
    text-decoration: none;
    color: black;
}
    
.arrow-left{
    display: flex;
    width: 0;
    height: 0;
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
    border-right: 10px solid black;
    margin-left: 15px;
    justify-self: center;
    
}

.arrow-right{
  width: 0; 
  height: 0; 
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  border-left: 10px solid black;
  margin-right: 15px;
}

.gallery-img{
    display: flex;
    height: 80vh;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    opacity: 0;
    
    animation-name: fadeIn;
    animation-duration: 1.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;

}

.img-fadeOut{
    animation-name: fadeOut;
    animation-duration: 1.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

@keyframes fadeIn{
    0%{
        opacity: 0%
    }

    100%{
        opacity: 100%
    }
}

@keyframes fadeOut {
    0% {
        opacity: 100%;
    }

    100%{
        opacity: 0%;
    }
    
}

.galleryWrapper{
    display: flex;
    flex-direction: row;
    align-items: center;
    
    height: 100vh;
    margin: 0 auto;
    justify-content: space-between;

    /*
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 15vh;
    justify-content: space-between;*/
}


.gallery-caption{
    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
    margin-top: 10px;
}

.gallery-figure{
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 80vh;
    flex-direction: column;
    align-items: center;
    margin: auto;
    width: fit-content;


    /*
    display: flex;
    position: static;
    height: 80vh;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;*/
}

.click-caption{
    display: none;
    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
    font-size: 10px;
    margin-top: 10px;
}


@media only screen and (max-width: 500px){
    /* homepage */
    
    .title{
        font-weight: 900;
        font-family: Helvetica;
        font-size: 36px;
        margin: 4vh 0px 0px 0px;
        text-align: center;
        
    }
    
    
    #splashWrapper {
        display: flex;
        flex-direction: column;
        width: 90vw;
        margin: 6vw auto 0 auto;
    }    

    #splashImg{
        width: 90vw;
        height: auto;
    }

    #linkWrapper{
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
        align-items: center;
        margin: 5vh;
    }

    .link{
        margin: 0px;
    }

    /* menu bar */

    .menuWrapper{
        background-color: rgba(255, 255, 255, .65);
        z-index: 40;
    }

    /* about page*/

    .aboutText{
        width: 75vw;
    }

    /* gallery */

    .gallery-figure {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 0 auto;
        justify-content: center;
        height: auto;
    }
    .galleryWrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 0px;
        justify-content: center;
        height: 90vh;
    }

    .gallery-img {
        max-width: 95vw;
        height: fit-content;
        margin: 0 auto;
        max-height: 65vh;
    }

    .gallery-caption{
        
        font-size: 14px;
        position: absolute;
        bottom: 8vh;

    }

    .arrow-left {
        display:none;
    }

    .arrow-right{
        display: none;
    }

    .click-caption{
        display: block;
        font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
        font-size: 10px;
        margin-top: 10px;
        position: absolute;
        bottom: 10vh;
    }


        

}

